# deepterra

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yaml  release.yaml
src/: cli.rs  main.rs  parser.rs  terraform.rs
src/discovery/: github.rs  local.rs  mod.rs
src/parser/: github.rs  mod.rs
src/parser_old/: github.rs  local.rs  mod.rs
src/visualize/: mod.rs
terraform/: main.tf  r-network.tf
terraform/another_terraform/: r-nsg.tf
