[package]
name = "deepterra"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
charming = "0.6.0"
env_logger = "0.11.8"
futures = "0.3.31"
hcl-rs = "0.19.2"
log = "0.4.27"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros", "time"] }
uuid = { version = "1.17.0", features = ["v4"] }
