[package]
name = "deepterra"
version = "0.1.1"
edition = "2024"
authors = ["dreadster3 <contact@dreadster3.mozmail.com>"]
description = "A tool to parse terraform and generate a resource dependency graph"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/dreadster3/deepterra"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.89"
charming = "0.6.0"
clap = { version = "4.5.43", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
glob = "0.3.3"
hcl-rs = "0.19.2"
indextree = "4.7.4"
jsonwebtoken = "9.3.1"
log = "0.4.27"
octocrab = "0.44.1"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros", "time"] }
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4"] }
